syntax = "proto3";

package where_child_bus.v1;

import "where_child_bus/v1/resources.proto";
import "google/protobuf/field_mask.proto";

service BusService {
        rpc CreateBus(CreateBusRequest) returns (CreateBusResponse);
        rpc GetBusListByNurseryId(GetBusListByNurseryIdRequest) returns (GetBusListByNurseryIdResponse);
        rpc GetRunningBusByGuardianId(GetRunningBusByGuardianIdRequest) returns (GetRunningBusByGuardianIdResponse);
        rpc UpdateBus(UpdateBusRequest) returns (UpdateBusResponse);
        rpc ChangeBusStatus(ChangeBusStatusRequest) returns (ChangeBusStatusResponse);

        rpc SendLocationContinuous(stream SendLocationContinuousRequest) returns (SendLocationContinuousResponse);
        rpc TrackBusContinuous(TrackBusContinuousRequest) returns (stream TrackBusContinuousResponse);
        rpc StreamBusVideo(stream StreamBusVideoRequest) returns (StreamBusVideoResponse);
}

message CreateBusRequest {
        string nursery_id = 1;
        string name = 2;
        string plate_number = 3;
}

message CreateBusResponse {
        Bus bus = 1;
}

message GetBusListByNurseryIdRequest {
        string nursery_id = 1;
}

message GetBusListByNurseryIdResponse {
        repeated Bus buses = 1;
}

message GetRunningBusByGuardianIdRequest {
        string guardian_id = 1;
}

message GetRunningBusByGuardianIdResponse {
        Bus bus = 1;
}

message ChangeBusStatusRequest {
        string bus_id = 1;
        BusStatus bus_status = 2;
        BusType bus_type = 3;
}

message ChangeBusStatusResponse {
        Bus bus = 1;
}

// Updated and newly defined messages for the adjusted RPCs
message SendLocationContinuousRequest {
        string bus_id = 1;
        double latitude = 2;
        double longitude = 3;
}

message SendLocationContinuousResponse {
  // Custom empty response type to conform to Protobuf style guide
}

message TrackBusContinuousRequest {
        string bus_id = 1;
}

message TrackBusContinuousResponse {
        string bus_id = 1;
        double latitude = 2;
        double longitude = 3;
        string next_station_id = 4;
}

message StreamBusVideoRequest {
        string bus_id = 1;
        string nursery_id = 2;
        BusType bus_type = 3;
        VehicleEvent vehicle_event = 4;
        repeated bytes video_chunk = 5; // Chunk of video data
        int32 photo_height = 6;
        int32 photo_width = 7;
}

message StreamBusVideoResponse {
        bool is_detected = 1;
        repeated Child children = 2;
}

message UpdateBusRequest {
        string bus_id = 1;
        string name = 2;
        string plate_number = 3;
        double latitude = 4;
        double longitude = 5;
        bool enable_face_recognition = 6;
        string next_station_id = 9;
        google.protobuf.FieldMask update_mask = 10;
}

message UpdateBusResponse {
        Bus bus = 1;
}
